atlanticrecords.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 8735,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.69,
  "homepage_snapshot_redirected_domain": "atlanticrecords.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060331172559id_/http://www.atlanticrecords.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060331172559id_/http%3A//atlanticrecords.com",
  "interval": "2006_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "atlanticrecords.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615033014id_/http%3A//www.atlanticrecords.com/privacy",
  "policy_title": "Atlantic Records - Privacy Policy",
  "policy_url": "atlanticrecords.com/privacy",
  "sha1": "20082c2f18ee0bcf3baeb48eeac9fc1f0c5280d6",
  "simhash": 13170117467706522857,
  "simhash_updated": false,
  "site_hostname": "atlanticrecords.com",
  "site_url": "http://atlanticrecords.com",
  "smog": 16.36,
  "strict_updated": false,
  "timestamp": "20060615033014",
  "word_count": 1426,
  "year": 2006
}

--- a/a/at/atl/atlanticrecords.com.html
+++ b/a/at/atl/atlanticrecords.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the atlanticrecords.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228130031id_/http%3A//www.atlanticrecords.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the atlanticrecords.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615033014id_/http%3A//www.atlanticrecords.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -16,12 +16,12 @@
 
 <div id="atlanticTopNavigation">
   <div style="position:absolute; z-index:999; left:0px; top:0px;">
-  <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="800" height="105" id="connector" align="middle">
+  <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="800" height="115" id="connector" align="middle">
   <param name="allowScriptAccess" value="sameDomain">
-  <param name="movie" value="/swf/generic.swf?artistCount=136&amp;releaseCount=5&amp;boardCount=72&amp;tourCount=24&amp;newsUpdate=12.21.2005">
+  <param name="movie" value="/swf/generic.swf?moduleNum=12&amp;artistCount=139&amp;releaseCount=8&amp;boardCount=65&amp;tourCount=38&amp;newsUpdate=06.14.2006">
   <param name="quality" value="high">
-  <param name="bgcolor" value="#FF6D00">
-  <embed src="/swf/generic.swf?artistCount=136&amp;releaseCount=5&amp;boardCount=72&amp;tourCount=24&amp;newsUpdate=12.21.2005" quality="high" bgcolor="#FF6D00" width="800" height="105" name="connector" align="middle" allowscriptaccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer">
+  <param name="wmode" value="transparent">
+  <embed src="/swf/generic.swf?moduleNum=12&amp;artistCount=139&amp;releaseCount=8&amp;boardCount=65&amp;tourCount=38&amp;newsUpdate=06.14.2006" quality="high" wmode="transparent" bgcolor="#FFFFFF" width="800" height="115" name="connector" align="middle" allowscriptaccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer">
   </object>
   </div>
   <br>
@@ -73,17 +73,17 @@
 <!-- FOOTER -->
 <div class="footer">
 <table border="0" cellpadding="0" cellspacing="0">
-  <tbody><tr colspan="4">
+  <tbody><tr>
     <td class="footerItem1" align="left">
-    <img src="/imgs/footer_link.gif"><a href="/privacy/" class="footerLink">privacy policy</a>
+    <img src="/imgs/footer_link.gif" alt=">"><a href="/privacy/" class="footerLink">privacy policy</a>
     </td>
     <td class="footerItem2 footerLink" align="left">
-    <img src="/imgs/footer_link.gif">copyright ©2004 Atlantic Records &nbsp;
-    <img src="/imgs/footer_link.gif"><a href="http://parentalguide.org/" class="footerLink" target="_blank">parentalguide.org</a>
+    <img src="/imgs/footer_link.gif" alt=">">copyright ©2004 Atlantic Records &nbsp;
+    <img src="/imgs/footer_link.gif" alt=">"><a href="http://parentalguide.org/" class="footerLink" target="_blank">parentalguide.org</a>
     </td>
     <td class="footerItem3" align="right">
 
-    <img src="/imgs/footer_link.gif"><a href="#" onclick="javascript:window.open('/popups/credits.jsp', 'credits', 'width=465,height=400,scrollbars=no,resize=yes')" class="footerLink">site credits</a>
+    <img src="/imgs/footer_link.gif" alt=">"><a href="#" onclick="javascript:window.open('/popups/credits.jsp', 'credits', 'width=465,height=400,scrollbars=no,resize=yes')" class="footerLink">site credits</a>
     </td>
   </tr>
 </tbody></table>
@@ -141,7 +141,7 @@ if(navigator.appVersion.indexOf("MSIE")>=0) {
     document.write(unescape("%3C")+"!-"+"-")
 }
 
---></script><img name="s_i_wmg" height="1" width="1" border="0" src="https://wmg.112.2O7.net/b/ss/wmg,wmgatl,wmgatlantic-records.com/1/G.0-Xp-S/s82050058130769?[AQB]&amp;ndh=1&amp;t=31/0/2020%207%3A55%3A35%205%200&amp;pageName=Atlantic%20Records%20-%20Privacy%20Policy%20%7C%20/web/20051228130031id_/http%3A//www.atlanticrecords.com/privacy/&amp;c1=privacy&amp;c5=web.archive.org&amp;g=https%3A//web.archive.org/web/20051228130031id_/http%3A//www.atlanticrecords.com/privacy/&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
+--></script><img name="s_i_wmg" height="1" width="1" border="0" src="https://wmg.112.2O7.net/b/ss/wmg,wmgatl,wmgatlantic-records.com/1/G.0-Xp-S/s85617397071551?[AQB]&amp;ndh=1&amp;t=31/0/2020%207%3A55%3A35%205%200&amp;pageName=Atlantic%20Records%20-%20Privacy%20Policy%20%7C%20/web/20060615033014id_/http%3A//www.atlanticrecords.com/privacy/&amp;c1=privacy&amp;c5=web.archive.org&amp;g=https%3A//web.archive.org/web/20060615033014id_/http%3A//www.atlanticrecords.com/privacy/&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
 
 <noscript>
     <img alt="" border="0" width="1" height="1" src="http://wmgmulti.112.2O7.net/b/ss/WMG,WMGATL,WMGatlantic-records.com/1/F.3-XeLvs" />
