--- a/t/te/tee/teenagersgoingwild.com.html
+++ b/t/te/tee/teenagersgoingwild.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the teenagersgoingwild.com privacy policy that was archived on 2005-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051216193836id_/http%3A//www.teenagersgoingwild.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the teenagersgoingwild.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615033133id_/http%3A//teenagersgoingwild.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy</title>
