--- a/t/ta/tam/tamhsc.edu.html
+++ b/t/ta/tam/tamhsc.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tamhsc.edu privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214084132id_/http%3A//www.tamhsc.edu/web/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tamhsc.edu privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615033723id_/http%3A//tamhsc.edu/web/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/generic.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -143,21 +143,22 @@
 <br clear="all">
 <div id="bottomlinks">
 <ul>
-<li>© 2005 HSC Communications</li>
-<li><a href="/web/search.php">Search</a></li>
-<li><a href="/about/faq.php">FAQ</a></li>
-<li><a href="/web/sitemap.php" accesskey="3" title="Site Map">A-Z Index</a></li>
-<li><a href="/web/privacy.php" accesskey="8" title="Privacy Statement">Privacy</a></li>
-<li><a href="/web/accessibility.php" accesskey="0" title="Accessibility Statement">Accessibility</a></li>
-<li><a href="/web/index.php" accesskey="9" title="Website Info">Website Info</a></li>
-<li><a href="/web/contactweb.php" title="Contact Webmaster">Contact Webmaster</a></li>
+  <li>© 2006<a href="http://tamhsc.edu/communications">&nbsp;HSC Communications</a></li>
+  <li><a href="/web/search.php">Search</a></li>
+  <li><a href="/about/faq.php">FAQ</a></li>
+  <li><a href="/web/sitemap.php" accesskey="3" title="Site Map">A-Z Index</a></li>
+  <li><a href="/web/index.php" accesskey="9" title="Website Info">Website Info</a></li>
+  <li><a href="/web/contactweb.php" title="Contact Webmaster">Contact Webmaster</a></li>
+  <li><a href="/web/privacy.php" accesskey="8" title="Privacy Statement">Privacy</a></li>
+  <li><a href="/web/accessibility.php" accesskey="0" title="Accessibility Statement">Accessibility</a></li>
+  <li><a href="http://sago.tamu.edu/iaudit/report_fraud.html">Report Fraud, Waste and Abuse</a></li>
 </ul>
 </div>
 <div id="footer">
-<p>The Health Science Center is part of the <a href="http://system.tamu.edu/">Texas
+<p>The Health Science Center is part of the <a href="http://tamus.edu/">Texas
 A&amp;M University System</a><br>
 Updated 
-May 18, 2005</p>
+January 13, 2006</p>
 </div></div>
 
 <!-- InstanceEnd --></body></html>
