immigration.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 1130,
  "classifier_probability": 0.78,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.69,
  "homepage_snapshot_redirected_domain": "immigration.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402205915id_/http://immigration.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402205915id_/http%3A//immigration.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "immigration.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615034055id_/http%3A//www.immigration.com/privacy.html",
  "policy_title": "Immigration.com - Privacy Policy",
  "policy_url": "immigration.com/privacy.html",
  "sha1": "5d9a35614c0af8ee8618b7b0d475db151942bf52",
  "simhash": 10162720296139637012,
  "simhash_updated": false,
  "site_hostname": "immigration.com",
  "site_url": "http://immigration.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615034055",
  "word_count": 177,
  "year": 2006
}

--- a/i/im/imm/immigration.com.html
+++ b/i/im/imm/immigration.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the immigration.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231133041id_/http%3A//www.immigration.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the immigration.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615034055id_/http%3A//www.immigration.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Immigration.com - Privacy Policy </title>
@@ -36,12 +36,14 @@
 </tr> 
 <tr><td colspan="3" bgcolor="black" valign="top"><img src="/img/blank.gif" width="100%" height="2"></td></tr>
 <tr>
-      <td colspan="3" bgcolor="#666698"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.immigration.com" target="_blank"><font face="ms sans serif" size="1" color="white"><b>Home</b></font></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.immigration.com/ourservice/" target="_blank"><b><font face="ms sans serif" size="1" color="white">Our 
-        Services </font></b></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.immigration.com/newsletter/updates.html" target="_blank"><font face="ms sans serif" size="1" color="white"><b>Immigration.com 
-        Updates </b></font></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://boards.immigrationportal.com/" target="_blank"><font face="ms sans serif" size="1" color="white"><b>Forums 
-        </b></font></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.immigration.com/faq/" target="_blank"><font face="ms sans serif" size="1" color="white"><b> 
-        FAQ </b></font></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.immigration.com/ins-tracker.html" target="_blank"><font face="ms sans serif" size="1" color="white"><b>USCIS 
-        Tracker </b></font></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.immigration.com/search/" target="_blank"><font face="ms sans serif" size="1" color="white"><b>Search 
+      <td colspan="3" bgcolor="#666698"> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
+        &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+        &nbsp; &nbsp; &nbsp; &nbsp;|&nbsp;&nbsp;<a href="http://www.immigration.com"><font face="ms sans serif" size="1" color="white"><b>Home</b></font></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.immigration.com/ourservice/" target="_blank"><b><font face="ms sans serif" size="1" color="white">Our 
+        Services </font></b></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.immigration.com/newsletter/updates.html"><font face="ms sans serif" size="1" color="white"><b>Immigration.com 
+        Updates </b></font></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://boards.immigrationportal.com/"><font face="ms sans serif" size="1" color="white"><b>Forums 
+        </b></font></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.immigration.com/faq/"><font face="ms sans serif" size="1" color="white"><b> 
+        FAQ </b></font></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.immigration.com/ins-tracker.html"><font face="ms sans serif" size="1" color="white"><b>USCIS 
+        Tracker </b></font></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.immigration.com/search/"><font face="ms sans serif" size="1" color="white"><b>Search 
         </b></font></a>&nbsp;&nbsp;|</td>
 </tr>
 
@@ -446,7 +448,7 @@
 	<td width="70%" valign="top">
 	<!-- Middle Side Starts -->
 	<!-- top most updated table starts here -->
-		<table cellspacing="0" cellpadding="0" border="0" width="100%" align="center"><tbody><tr><td bgcolor="black" colspan="3"><img src="/img/blank.gif" width="100%" height="2" alt=""></td></tr><tr>    <td bgcolor="#CCCCFE"><img src="/img/blank.gif" width="5" height="5" alt="" border="0"></td>    <td bgcolor="#CCCCFE"><img src="/img/blank.gif" width="1" height="1" alt="" border="0"></td><td bgcolor="#CCCCFE"><img src="/img/blank.gif" width="1" height="1" alt="" border="0"></td></tr><tr>    <td colspan="3" align="right" bgcolor="#CCCCFE"><font face="ms sans serif" size="1" color="black"> Site Content Modified on : <b>31 December 2005</b> </font></td></tr><tr>    <td align="left" valign="top"><img src="/img/leftcurve.gif" width="5" height="5" alt="" border="0"></td>    <td bgcolor="white"><img src="/img/blank.gif" width="1" height="1" alt="" border="0"></td><td align="right" valign="top"><img src="/img/rightcurve.gif" width="5" height="5" alt="" border="0"></td></tr></tbody></table>
+		<table cellspacing="0" cellpadding="0" border="0" width="100%" align="center"><tbody><tr><td bgcolor="black" colspan="3"><img src="/img/blank.gif" width="100%" height="2" alt=""></td></tr><tr>    <td bgcolor="#CCCCFE"><img src="/img/blank.gif" width="5" height="5" alt="" border="0"></td>    <td bgcolor="#CCCCFE"><img src="/img/blank.gif" width="1" height="1" alt="" border="0"></td><td bgcolor="#CCCCFE"><img src="/img/blank.gif" width="1" height="1" alt="" border="0"></td></tr><tr>    <td colspan="3" align="right" bgcolor="#CCCCFE"><font face="ms sans serif" size="1" color="black"> Site Content Modified on : <b>14 June 2006</b> </font></td></tr><tr>    <td align="left" valign="top"><img src="/img/leftcurve.gif" width="5" height="5" alt="" border="0"></td>    <td bgcolor="white"><img src="/img/blank.gif" width="1" height="1" alt="" border="0"></td><td align="right" valign="top"><img src="/img/rightcurve.gif" width="5" height="5" alt="" border="0"></td></tr></tbody></table>
  
 	<!-- top most updated table ends here -->	
 <table cellpadding="0" cellspacing="0" border="0" width="100%">
@@ -974,7 +976,7 @@ function validat(form)
 <!-- saved from url=(0022)http://internet.e-mail -->
 <script language="JavaScript">
 //scroller's width
-var swidth=123;
+var swidth=126;
 //scroller's height (as a guide: 20 to 22.5 per row!)
 var sheight=150;
 //slider's speed
@@ -986,7 +988,7 @@ var bcolor="#ffffff"; //white
 
 var wholemessage='';
 
-wholemessage='<table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://devforums.immigrationportal.com/anthesys/Production/GuestBook/listClientGuest.php?yr=2005" style="text-decoration: none"><font face=Arial size=2 color="black"><b>Comments From Our Clients</b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/india/dualindia.html" style="text-decoration: none"><font face=Arial size=2 color="black"><b>India Dual Citizenship</b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/common/discussion.html" style="text-decoration: none"><font face=Arial size=2 color="black"><b>This Weeks Most Talked About Issues</b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/improving_immigration/ciscorrh1.html"style="text-decoration: none"><font face=Arial size=2 color="black"><b>Our Efforts for Clients and Community: CIS Corrects Errors in Three-Year H-1 Extensions Beyond Six Years</b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/frame/statonpatactfr.html"style="text-decoration: none"><font face=Arial size=2 color="black"><b>DHS Issues Remarks on USA Patriot Act</b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/newsletter1/vawa05cleared.html"style="text-decoration: none"><font face=Arial size=2 color="black"><b>Senate and House Cleared VAWA 2005 for the Presidents Signature</b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/processing-times/uscisproctimes.html"style="text-decoration: none"><font face=Arial size=2 color="black"><b>USCIS Service Center Processing Times</b></font></a></td></tr></table>';
+wholemessage='<table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/newsletter1/h1bcapac21.pdf" style="text-decoration: none"><font face=Arial size=2 color="black"><b>USCIS Memo Regarding Eligibility For Exemption From H-1B Cap On AC21   </b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/newsletter1/EB1Visa060606.pdf" style="text-decoration: none"><font face=Arial size=2 color="black"><b>USCIS Memo On Permanent Employment for Outstanding Professors and Researchers  </b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/newsletter1/aupairamend.html"style="text-decoration: none"><font face=Arial size=2 color="black"><b>DOS Publishes Final Rule On Au Pairs  </b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/fromtheagency/calservicecenter.html"style="text-decoration: none"><font face=Arial size=2 color="black"><b>CSC Updates</b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/fromtheagency/misservicecenter.html" style="text-decoration: none"><font face=Arial size=2 color="black"><b>NBC Updates</b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/fromtheagency/uscisupdates.html" style="text-decoration: none"><font face=Arial size=2 color="black"><b>USCIS Updates on H-1B Cap Issues </b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://devforums.immigrationportal.com/anthesys/Production/GuestBook/listClientGuest.php?yr=2006"style="text-decoration: none"><font face=Arial size=2 color="black"><b>Comments From Our Clients</b></font></a></td></tr></table>'+'<br><p><table align="center" border=0 CELLSPACING="0" CELLPADDING="0"><tr><td align="center"><a href="http://www.immigration.com/citizenship/"style="text-decoration: none"><font face=Arial size=2 color="black"><b>Citizenship</b></font></a></td></tr></table>';
 
 -
 function start()
@@ -1077,7 +1079,7 @@ document.writeln('<div id="iens6slider" style="position:relative;width:'+swidth+
 document.writeln('</div></div>');
 }
 
-</script><div style="position:relative;overflow:hidden;width:123;height:150;clip:rect(0 123 150 0);border:1px solid black ;background-color:#ffffff;" onmouseover="sspeed=0;" onmouseout="sspeed=resumesspeed"><div id="iens6slider" style="position:relative;width:123;height:150;">
+</script><div style="position:relative;overflow:hidden;width:126;height:150;clip:rect(0 126 150 0);border:1px solid black ;background-color:#ffffff;" onmouseover="sspeed=0;" onmouseout="sspeed=resumesspeed"><div id="iens6slider" style="position:relative;width:126;height:150;">
 </div></div>
 </span>
 
