superbreak.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "travel",
  "char_count": 3143,
  "classifier_probability": 0.81,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.78,
  "homepage_snapshot_redirected_domain": "superbreak.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060405041347id_/http://www.superbreak.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060405041347id_/http%3A//superbreak.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "superbreak.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615034300id_/http%3A//www.superbreak.com/info/privacyinfo.htm",
  "policy_title": "Superbreak > Hotel Bookings, Reservations & Short Break Holidays",
  "policy_url": "superbreak.com/info/privacyinfo.htm",
  "sha1": "c6f564e2a81ae482e04831d2e4d80f156e9f823d",
  "simhash": 699788526448512228,
  "simhash_updated": false,
  "site_hostname": "superbreak.com",
  "site_url": "http://superbreak.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615034300",
  "word_count": 515,
  "year": 2006
}

--- a/s/su/sup/superbreak.com.html
+++ b/s/su/sup/superbreak.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the superbreak.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214121527id_/http%3A//www.superbreak.com/info/privacyinfo.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the superbreak.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615034300id_/http%3A//www.superbreak.com/info/privacyinfo.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Superbreak &gt; Hotel Bookings, Reservations &amp; Short Break Holidays</title>
@@ -28,7 +28,7 @@
 	<script type="text/javascript" src="/webfiles/scripts/pageinit/throwPop.init.js"></script>
 	
 			<!-- HITBOX STANDARD TRACKING -->
-			<script type="text/javascript" src="/webfiles/scripts/hitbox/configPageParams.cfm?pn=PrivacyInfo&amp;mlc=/Features/Direct&amp;acct=DM540318CMDV&amp;cacct=975403206871"></script>
+			<script type="text/javascript" src="/webfiles/scripts/hitbox/configPageParams.cfm?gn=a.superbreak.com&amp;pn=PrivacyInfo&amp;mlc=/Features/Direct&amp;acct=DM540318CMDV&amp;cacct=975403206871"></script>
 			<script type="text/javascript" src="/webfiles/scripts/hitbox/hitBox.js"></script>
 		
 	<script type="text/javascript" src="/webfiles/scripts/functions/cookie.js"></script>
@@ -79,9 +79,9 @@ Find out more"></a>
 				--><li class="navSwap" id="t-but-offers"><a href="http://www.superbreak.com/discounted-hotels.htm" title="Offers">Offers<span></span></a></li><!--
 				--><li class="navSwap" id="t-but-theatre"><a href="http://www.superbreak.com/theatre-breaks.htm" title="Theatre Breaks">Theatre<span></span></a></li><!--
 				--><li class="navSwap" id="t-but-events"><a href="http://www.superbreak.com/events/index.htm" title="Events">Events<span></span></a></li><!--
+				--><li class="navSwap" id="t-but-themeparks"><a href="http://www.superbreak.com/themepark-breaks.htm" title="Themeparks">Themeparks<span></span></a></li><!--
 				--><li class="navSwap" id="t-but-airport"><a href="http://www.superbreak.com/search/airport-hotels.htm" title="Airport Hotels">Airport Hotels<span></span></a></li><!--
-				--><li class="navSwap" id="t-but-international"><a href="http://www.superbreak.com/international-hotels.htm" title="International Hotels &amp; City Breaks">International<span></span></a></li><!--
-				--><li class="navSwap" id="t-but-mapSearch"><a href="http://www.superbreak.com/maps/map-search.htm" title="Map Search">Map Search<span></span></a></li>
+				--><li class="navSwap" id="t-but-european"><a href="http://www.superbreak.com/international-hotels.htm" title="International">International<span></span></a></li>
 			</ul>
 		</div>
 	</div>
@@ -104,16 +104,16 @@ Find out more"></a>
 			
 			<h4>Features</h4> 
 			<ul id="features">
-				
 				<li><a href="http://www.superbreak.com/search/advanced-search.htm">Advanced Search</a></li>
-				<li><a href="http://www.superbreak.com/promo/saverbreak.htm">Saverbreak</a></li>
 				<li><a href="http://www.superbreak.com/promo/gner.htm">Hotel and Rail Breaks</a></li>
 				<li><a href="http://www.superbreak.com/features/groups.htm">For Groups</a></li>
 				<li><a href="http://www.superbreak.com/features/singlesavers.htm">For Singles</a></li>
 				<li><a href="http://www.superbreak.com/features/spa-breaks.htm">Spa Breaks</a></li>
 				<li><a href="http://www.superbreak.com/search/golf-breaks.htm">Golf Breaks</a></li>
 				<li><a href="http://www.superbreak.com/themepark-breaks.htm">Themepark Breaks</a></li>
+				<li><a href="http://www.superbreak.com/promo/warner-breaks.htm">Warner Breaks</a></li>
 				<li><a href="http://www.superbreak.com/promo/pando.htm">Minicruise Breaks</a></li>
+				<li><a href="http://www.superbreak.com/maps/map-search.htm">Map Search</a></li>
 				<li><a href="http://www.superbreak.com/features/gift-vouchers.htm">Gift Vouchers</a></li>
 				<li><a href="http://www.superbreak.com/marketing/free-break.htm">Win a Hotel Break</a></li>
 				<li><a href="http://www.superbreak.com/features/brochures.htm">Brochures</a></li>
@@ -121,7 +121,6 @@ Find out more"></a>
 			<div id="callUs">
 				<h4>Telephone Bookings</h4> 
 				<p>Call <span>0870 701 4444</span></p>
-				
 			</div>
 			<h4>Hotel Code</h4>
 			<h5>Enter here</h5>
@@ -137,13 +136,14 @@ Find out more"></a>
 			<h4>General</h4>
 			<ul id="general">
 				<li><a href="http://www.superbreak.com/info/about-us.htm">About Superbreak</a></li>
+				<li><a href="http://www.superbreak.com/info/saynotobedtax.htm">Say No to Bed Tax!</a></li>
 				<li><a href="http://www.superbreak.com/info/tandc.htm">Terms</a></li>
 				<li><a href="http://www.superbreak.com/hotel-directory/index.htm">Hotel Directory</a></li>
 				<li><a href="http://www.superbreak.com/info/privacyinfo.htm">Privacy</a></li>
 				<li><a href="http://www.superbreak.com/info/travel-links.htm">Travel links</a></li>
-				<li><a href="http://www.superbreak.com/info/add-hotel.htm">Add hotel</a></li>
+				<li><a href="http://www.superbreak.com/info/add-hotel.htm">List your Hotel</a></li>
 				<li><a href="http://www.superbreak.com/info/faq.htm">FAQ</a></li>
-				<li><a href="/adminsuite/2004/affiliateOptions.htm">Affiliates</a></li>
+				<li><a href="/adminsuite/2004/affiliateOptions.htm">Affiliate program</a></li>
 			</ul>
 		</div>
 
@@ -257,7 +257,7 @@ Find out more"></a>
 	<div id="footer">
 		<div id="footerBar">
 			<div id="backToTop"><a href="#Top">back to top</a></div>
-			<div id="copyright"><span>© 1996-2005. Superbreak Mini Holidays. All rights reserved.</span></div>
+			<div id="copyright"><span>© 1996-2006. Superbreak Mini Holidays. All rights reserved.</span></div>
 		</div>
 		<ul>
 			<li class="first"><a href="http://www.superbreak.com/london.htm">London Breaks</a></li>
@@ -266,18 +266,19 @@ Find out more"></a>
 			<li><a href="http://www.superbreak.com/discounted-hotels.htm">Special Offers</a></li>
 			<li><a href="http://www.superbreak.com/theatre-breaks.htm">Theatre Breaks</a></li>
 			<li><a href="http://www.superbreak.com/search/airport-hotels.htm">Airport Hotels</a></li>
-			<li><a href="http://www.explore.co.uk">Adventure Holidays from Explore Worldwide</a></li> 
-			<li class="first"><a href="http://www.superbreak.com/ezinearchive/index.htm">Superbreak Archive</a></li>
-			<li><a href="/adminsuite/2004/home.cfm">Affiliate Programme</a></li>
+			<li><a href="http://www.superbreak.com/ezinearchive/index.htm">Superbreak Archive</a></li>
+			<li><a href="/adminsuite/2004/home.cfm">Hotel Affiliate Program</a></li>
 			<li><a href="http://www.superbreak.com/international-hotels.htm">European City Breaks</a></li>
-			<li><a href="http://www.carrentals.co.uk">Car Rentals</a></li>
+			<li><a href="http://www.carrentals.co.uk/">Car Rentals</a></li>
 			<li><a href="http://www.superbreak.com/marketing/free-break.htm">Win a hotel break</a></li>
 			<li><a href="http://www.superbreak.com/features/brochures.htm">Superbreak Brochures</a></li>
 			<li><a href="http://www.superbreak.com/info/faq.htm">Q&amp;A</a></li>
 			<li class="first"><a href="http://www.superbreak.com/info/privacyinfo.htm">Privacy</a></li>
 			<li><a href="http://www.superbreak.com/">Short Break - Home</a></li>
-			<li><a href="http://www.nationalrail.co.uk">National Rail Enquiries</a></li>
-			<li><a href="http://www.regal-diving.co.uk">Diving Holidays from Regal Dive</a></li>
+			<li><a href="http://www.nationalrail.co.uk/">National Rail Enquiries</a></li>
+			<li><a href="http://www.regal-diving.co.uk/">Diving Holidays from Regal Dive</a></li>
+			<li><a href="http://www.explore.co.uk/">Adventure Holidays from Explore Worldwide</a></li> 
+			<li><a href="http://www.keycamp.co.uk/">Family camping holidays with Keycamp</a></li>
 		</ul>
 	</div>
 
@@ -287,7 +288,5 @@ Find out more"></a>
 
 
 <script type="text/javascript">if(typeof(window._onDOMLoad) == 'function') setTimeout(window._onDOMLoad,5);</script>
-
-
 
 </body></html>
