--- a/c/co/com/computerjobs.com.html
+++ b/c/co/com/computerjobs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the computerjobs.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219171141id_/http%3A//www.computerjobs.com/about_us/main/main.aspx%3Fdisplay%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the computerjobs.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615034352id_/http%3A//computerjobs.com/about_us/main/main.aspx%3Fdisplay%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<title>ComputerJobs.com - About Us - Privacy</title>
@@ -499,7 +499,7 @@
 		<p>
 			<table width="740" cellpadding="0" cellspacing="0">
 	<tbody><tr>
-		<td align="center"><font face="arial" size="1" color="ffffff">Copyright 1995-2005 © ComputerJobs.com, Inc. All Rights Reserved.<br>ComputerJobs.com is a registered trademark of ComputerJobs.com, Inc.<br><a href="/about_us/main/legal.aspx"><font color="ffffff">Legal Notices</font></a> | <a href="/about_us/main/privacy.aspx"><font color="ffffff">Privacy Statement</font></a> | <a href="/about_us/main/contact.aspx"><font color="ffffff">Contact Us</font></a> | <a href="/about_us/main/main.aspx"><font color="ffffff">About Us</font></a> | <a href="/about_us/main/advert.aspx"><font color="ffffff">Advertising</font></a> | <a href="javascript:openWindow('/redesign_survey.asp','SiteSurvey')"><font color="ffffff">Site Survey</font></a> <br><br></font> </td>
+		<td align="center"><font face="arial" size="1" color="ffffff">Copyright 1995-2006 © ComputerJobs.com, Inc. All Rights Reserved.<br>ComputerJobs.com is a registered trademark of ComputerJobs.com, Inc.<br><a href="/about_us/main/legal.aspx"><font color="ffffff">Legal Notices</font></a> | <a href="/about_us/main/privacy.aspx"><font color="ffffff">Privacy Statement</font></a> | <a href="/about_us/main/contact.aspx"><font color="ffffff">Contact Us</font></a> | <a href="/about_us/main/main.aspx"><font color="ffffff">About Us</font></a> | <a href="/about_us/main/advert.aspx"><font color="ffffff">Advertising</font></a> | <a href="javascript:openWindow('/redesign_survey.asp','SiteSurvey')"><font color="ffffff">Site Survey</font></a> <br><br></font> </td>
 	</tr>
 </tbody></table>
 
