--- a/n/no/nor/northpole.com.html
+++ b/n/no/nor/northpole.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the northpole.com privacy policy that was archived on 2005-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051225081715id_/http%3A//www.northpole.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the northpole.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615034546id_/http%3A//www.northpole.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Visit with Santa Claus at northpole.com</title>
@@ -81,7 +81,8 @@ function writeIt(a, b, c, d) {
 <li><a href="/Overview/Teacher.html" class="menuB">Teachers</a></li>
 </font>
 </ul></td></tr></tbody></table>
-<a href="/Donation.html"><img src="/Images/Sidebar/DonateButton.gif" border="0" vspace="20"></a>
+
+<a href="Donation.html"><img src="/Images/Sidebar/DonateButton.gif" border="0" vspace="20"></a>
 
 <table cellpadding="0" cellspacing="0" border="0">
 <tbody><tr>
