--- a/i/if/ifo/ifone.com.html
+++ b/i/if/ifo/ifone.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the ifone.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231120159id_/http%3A//www.ifone.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ifone.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615034630id_/http%3A//www.ifone.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
-<title>Privacy Policy - iFone</title>
+<title>Privacy Policy - glu mobile | Download mobile java games | Download cell phone games</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <base href="http://www.ifone.com/">
 <style type="text/css" media="all">@import "misc/drupal.css";</style>
@@ -29,6 +29,9 @@
 //-->
 </script>
 
+<script src="misc/RunFlash.js" type="text/javascript"></script>
+
+<!-- google analytics -->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
@@ -49,10 +52,12 @@ urchinTracker();
 <div id="Header">
     <div id="CurveTop"><span class="Spacer">&nbsp;</span></div><!-- end curvetop div -->
 
-    <div id="HeaderLogo"></div><!-- end headerlogo div -->
+    <div id="HeaderLogo"><a href="http://www.glu.com/index2.php"><img src="themes/www7/images/system/spacer.gif" alt="Go to Glu homepage"></a></div><!-- end headerlogo div -->
 
     <div id="HeaderBanner">
-        <a href="contact">Contact Us</a> | <a href="sitemap">Site Map</a>
+        <div id="HeaderBannerLinks"><a href="http://www.glu.com/about/contact_us.php">Contact Us</a> | <a href="sitemap">Site Map</a></div>
+		<br>
+		<a href="http://www.ifone.com/home"><img src="themes/www7/images/system/spacer.gif" alt="Go to iFone homepage"></a>
     </div><!-- end headerbanner div -->
 
 	
@@ -61,11 +66,10 @@ urchinTracker();
 	
 		<div id="MainNavRight">
 			<ul>
-									<li><a href="." title="HOME" accesskey="0">HOME</a></li>
-									<li><a href="news" title="NEWS" accesskey="N">NEWS</a></li>
+									<li><a href="home" title="HOME" accesskey="0">HOME</a></li>
+									<li><a href="http://www.glu.com/about/press_room.php" title="NEWS" accesskey="N">NEWS</a></li>
 									<li><a href="games" title="GAMES" accesskey="G">GAMES</a></li>
-									<li><a href="corporate" title="CORPORATE" accesskey="C">CORPORATE</a></li>
-									<li><a href="corporate/press" title="PRESS ROOM" accesskey="P">PRESS ROOM</a></li>
+									<li><a href="http://www.glu.com/about/" title="CORPORATE" accesskey="C">CORPORATE</a></li>
 									<li><a href="support" title="SUPPORT" accesskey="S">SUPPORT</a></li>
 							</ul>
 		</div><div class="ClearFloat"></div></div><!-- end MainNavWrapper div -->
@@ -82,11 +86,12 @@ urchinTracker();
 <div id="BodyBackWrapper">
 
     <div id="NavColumn">
-        <div class="SecondaryNavHead"><span class="Spacer">&nbsp;</span></div><!-- end SecondaryNavHead div --><div class="SecondaryNavBody"><ul><li><a href="contact" title="Contact Us">Contact Us</a></li>
+        <div class="SecondaryNavHead"><span class="Spacer">&nbsp;</span></div><!-- end SecondaryNavHead div --><div class="SecondaryNavBody"><ul><li><a href="http://www.glu.com/about/contact_us.php" title="Contact Us">Contact Us</a></li>
 <li><a href="sitemap" title="Site Map">Site Map</a></li>
 <li><a href="accessibility" title="Accessibility">Accessibility</a></li>
 <li><a href="privacy" title="Privacy Policy" class="active">Privacy Policy</a></li>
 <li><a href="terms" title="Terms &amp; Conditions">Terms &amp; Conditions</a></li>
+<li><a href="emaildisclaimer" title="Email Disclaimer">Email Disclaimer</a></li>
 </ul></div><!-- end SecondaryNavBody div -->
     </div><!-- end navcolumn div -->
 
@@ -128,7 +133,20 @@ urchinTracker();
 <a href="monkeyballgolf"><img src="images/modules/smallteasers/GraphicTeaser-MonkeyBallGolf.gif" alt="Go to Monkey Ball Mini Golf page"></a>
 </div>
 <div class="TeaserSpace2">
-<a href="lemmings"><img src="images/modules/smallteasers/GraphicTeaser-Lemmings.gif" alt="More info about Lemmings"></a>
+<script type="text/javascript">RunFlash('<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="200" height="200" id="FlashTeaser-ChuChuRocket" align="middle"><param name="allowScriptAccess" value="sameDomain" /><param name="movie" value="images/modules/smallteasers/FlashTeaser-ChuChuRocket.swf" /><param name="menu" value="false" /><param name="quality" value="high" /><param name="wmode" value="transparent" /><param name="bgcolor" value="#ffffff" /><embed src="images/modules/smallteasers/FlashTeaser-ChuChuRocket.swf" menu="false" quality="high" wmode="transparent" bgcolor="#ffffff" width="200" height="200" name="FlashTeaser-ChuChuRocket" align="middle" allowScriptAccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" /></object>');</script>
+
+
+<noscript>
+<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="200" height="200" id="FlashTeaser-ChuChuRocket" align="middle">
+	<param name="allowScriptAccess" value="sameDomain" />
+	<param name="movie" value="images/modules/smallteasers/FlashTeaser-ChuChuRocket.swf" />
+	<param name="menu" value="false" />
+	<param name="quality" value="high" />
+	<param name="wmode" value="transparent" />
+	<param name="bgcolor" value="#ffffff" />
+	<embed src="images/modules/smallteasers/FlashTeaser-ChuChuRocket.swf" menu="false" quality="high" wmode="transparent" bgcolor="#ffffff" width="200" height="200" name="FlashTeaser-ChuChuRocket" align="middle" allowScriptAccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
+</object>
+</noscript>
 </div>
 
     </div><!-- end teasercolumn div -->
@@ -167,7 +185,7 @@ urchinTracker();
 <script language="JavaScript" type="text/JavaScript">
 <!--
 	if (ExtraPromoHTML != null) {
-		document.write(ExtraPromoHTML);
+		RunFlash(ExtraPromoHTML);
 	}
 //-->
 </script>
