--- a/a/ad/adv/advance.net.html
+++ b/a/ad/adv/advance.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the advance.net privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219212412id_/http%3A//advance.net/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the advance.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615034833id_/http%3A//www.advance.net/privacypolicy) for the most accurate reproduction.-->
 
 <html><head>
 <title>advance.net</title>
@@ -79,7 +79,7 @@ Jersey City, NJ 07306
 <td width="152" colspan="7">&nbsp;</td>
 <td width="613" align="center"><font face="arial,sans-serif" size="1"><img src="/images/spacer.gif" width="1" height="2" vspace="3"><br>
 <a href="/useragreement/">User Agreement</a> | <a href="/privacypolicy/">Privacy Policy</a> | <a href="mailto:advance@advance.net">Contact Us</a><br>
-© 2005 Advance Internet. All Rights Reserved.<br></font></td></tr>
+© 2006 Advance Internet. All Rights Reserved.<br></font></td></tr>
 <tr>
 <td width="3"><img src="/images/spacer.gif" width="3" height="1"></td>
 <td width="140"><img src="/images/spacer.gif" width="140" height="1"></td>
