--- a/m/ma/mad/madsci.org.html
+++ b/m/ma/mad/madsci.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the madsci.org privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212132644id_/http%3A//www.madsci.org/info/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the madsci.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615035214id_/http%3A//madsci.org/info/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>MadSci Privacy Policy</title>
@@ -127,16 +127,48 @@ at <a href="mailto:webadmin@www.madsci.org">webadmin@www.madsci.org</a>.
 <i>Last modified 9/21/2005</i><br>
 Previous versions: <a href="privacy.7.11.2005.html">7.11.2005</a>,
 <a href="privacy.10.2001.html">10.31.2001</a>.
+<p>
+</p><center>
 <hr>
-<center>
-<a href="/index.html">MadSci Home</a> |
-<a href="/info.html">Info</a> |
-<a href="/circumnav">MadSci Archives</a> |
-<a href="/MS_search.html">Search MadSci</a> |
-<a href="/libs/libs.html">MAD Library</a> |
-<a href="/labs/MAD_labs.html">MAD Labs</a> |
-<a href="/submit.html">Ask A ?</a> |
-<a href="/join/join.html">Join Us!</a>
+<!-- SiteSearch Google -->
+<form method="get" action="http://www.madsci.org/results.html">
+<input type="hidden" name="domains" value="madsci.org">
+<input type="text" name="q" size="25" maxlength="255" value="">
+<input type="submit" value="Search MadSci">
+
+<input type="hidden" name="sitesearch" value="madsci.org">
+<input type="hidden" name="client" value="pub-1458446060997439">
+<input type="hidden" name="forid" value="1">
+<input type="hidden" name="channel" value="4201458612">
+<input type="hidden" name="ie" value="ISO-8859-1">
+<input type="hidden" name="oe" value="ISO-8859-1">
+<input type="hidden" name="safe" value="active">
+<input type="hidden" name="cof" value="GALT:204A6C;DIV:336699;VLC:663399;ALC:0000FF;LC:0000FF;BGC:FFFFFF;T:00000
+0;GFNT:0000FF;GIMP:0000FF;S:http://madsci.org;FORID:9;">
+<input type="hidden" name="hl" value="en">
+</form>
+
+<hr>
+<b>
+<a href="/">MadSci Home</a> | <a href="/info/">Information</a> |
+<a href="/MS_search.html">Search</a> | 
+<a href="/random/">Random Knowledge Generator</a> |
+<a href="/circumnav/">MadSci Archives</a> |
+<a href="/libs/">Mad Library</a> | <a href="/labs/">MAD Labs</a> |
+<a href="/FAQs/">MAD FAQs</a> |
+<a href="/submit.html">Ask a ?</a> | 
+<a href="/join/">Join Us!</a> |
+<a href="/donate/">Help Support MadSci</a>
+</b>
 </center>
 
-</body></html>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-278319-1";
+urchinTracker();
+</script>
+
+<p>
+
+</p></body></html>
