--- a/o/ol/oli/oliveglobal.com.html
+++ b/o/ol/oli/oliveglobal.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the oliveglobal.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212152607id_/http%3A//www.oliveglobal.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the oliveglobal.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615035932id_/http%3A//www.oliveglobal.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Olive E-Business New Delhi, India: E-Commerce Solutions Strategy And Implementation, Web Site (Website) Design And Development, Hosting, Customized Internet Applications</title>
@@ -193,8 +193,8 @@
                           <td align="right"><font face="tahoma">+1 604 893 7065</font></td>
                         </tr>
                         <tr>
-                          <td height="15"><font face="tahoma"><b>Dubai</b></font></td>
-                          <td align="right"><font face="tahoma">+971 50 2744765</font></td>
+                          <td height="15"><font face="tahoma"><b>UAE</b></font></td>
+                          <td align="right"><font face="tahoma">+971 4 2731432</font></td>
                         </tr>
                         <tr>
                           <td height="15"><font face="tahoma"><b>Oman</b></font></td>
